TRESTLE-429: A bit of refactoring.